# routes/EnergyRoutes.mjs
@@ -5,6 +5,7 @@ import {
   deleteAllEnergies,
   deleteEnergy,
   createEnergy,
+  updateEnergy
 } from "../controllers/EnergyController.mjs";
 
 const router = Router();
@@ -12,7 +13,8 @@ const router = Router();
 router.get("/energies", getEnergies);
 router.get("/energies/:id", getEnergy);
 router.delete("/energies", deleteAllEnergies);
-router.delete("/energies/:id", deleteEnergy);
+router.delete("/energies/delete/:id", deleteEnergy);
 router.post("/energies/create", createEnergy);
+router.put("/energies/update/:id", updateEnergy);
 
 export default router;
